new IconButton class + pmd and sonar code lint