@@ -40,7 +40,7 @@ public class AutoCompComboBox<E> extends JosmComboBox<E> implements TableCellEdi
      * Constructs an {@code AutoCompletingComboBox}.
      */
     public AutoCompComboBox() {
-        this(new AutoCompComboBoxModel<E>());
+        this(new AutoCompComboBoxModel<>());
     }
 
     /**
@@ -142,7 +142,7 @@ public class AutoCompComboBox<E> extends JosmComboBox<E> implements TableCellEdi
         if (useFixedLocale) {
             Locale oldLocale = privateInputContext.getLocale();
             Logging.info("Using English input method");
-            if (!privateInputContext.selectInputMethod(new Locale("en", "US"))) {
+            if (!privateInputContext.selectInputMethod(Locale.of("en", "US"))) {
                 // Unable to use English keyboard layout, disable the feature
                 Logging.warn("Unable to use English input method");
                 useFixedLocale = false;
@@ -170,6 +170,7 @@ public class AutoCompComboBox<E> extends JosmComboBox<E> implements TableCellEdi
 
     @Override
     public void autoCompBefore(AutoCompEvent e) {
+        // empty
     }
 
     @Override
